--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 
 .img-circle {
-    width: 50%;
-    height: 50%;
-    border-radius: 75%;
+    width: 250px;
+    height: 250px;
+    border-radius: 25%;
 }
 
 body {
