--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 body {
     margin: 30px auto;
     width: 90%;
-    background-color: coral;
+    background-color: pink;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
