--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 body {
     margin: 30px auto;
     width: 90%;
-    background-color: #ffdacc;
+    background-color: rgba(255, 99, 71, 0.2);
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
